crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_step_commit_release.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange step commit-release

Run the built-in commit-release release workflow step

[1m[97mUsage:[0m monochange step commit-release [--dry-run] [--no-verify] [--update-release-json] [--stage-all] [--commit-backend <COMMIT_BACKEND>] [--hosted-auth <HOSTED_AUTH>] [--hosted-url <HOSTED_URL>] [--oidc-audience <OIDC_AUDIENCE>]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
      [93m--no-verify[0m
          Skip Git commit hooks for this operation

      [93m--update-release-json[0m
          Update the committed release record before committing

      [93m--stage-all[0m
          Stage every workspace change instead of release files only

      [93m--commit-backend[0m[95m [0m[95m<COMMIT_BACKEND>[0m
          Backend that writes the release commit: local git or the hosted monochange app

          [possible values: local, hosted]

      [93m--hosted-auth[0m[95m [0m[95m<HOSTED_AUTH>[0m
          Authentication the hosted backend uses: GitHub Actions OIDC or a monochange token

          [possible values: auto, oidc, token]

      [93m--hosted-url[0m[95m [0m[95m<HOSTED_URL>[0m
          Base URL of the hosted monochange app

      [93m--oidc-audience[0m[95m [0m[95m<OIDC_AUDIENCE>[0m
          Audience required in the GitHub Actions OIDC token for hosted commits

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange run commit-release --dry-run --format json
  monochange run commit-release --dry-run --diff
  monochange run commit-release

Commit notes:
  - Reuses the standard monochange release commit subject/body contract.
  - Embeds a durable release record block in the commit body.
  - Can run before OpenReleaseRequest in the same workflow.
