crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_step_plan_publish_rate_limits.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange step plan-publish-rate-limits

Run the built-in plan-publish-rate-limits release workflow step

[1m[97mUsage:[0m monochange step plan-publish-rate-limits [--dry-run] [--format <FORMAT>] [--mode <MODE>] [--package <PACKAGE>] [--ci <CI>] [--readiness <PATH>] [--all]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
      [93m--format[0m[95m [0m[95m<FORMAT>[0m
          Result format: text, Markdown, pretty JSON, or compact JSON

          [possible values: text, json, json-min, md]

      [93m--mode[0m[95m [0m[95m<MODE>[0m
          Plan limits for release or placeholder publishing

          [possible values: publish, placeholder]

      [93m--package[0m[95m [0m[95m<PACKAGE>[0m
          Limit the operation to one or more package ids

      [93m--ci[0m[95m [0m[95m<CI>[0m
          Render a CI configuration snippet for the selected provider

          [possible values: github-actions, gitlab-ci]

      [93m--readiness[0m[95m [0m[95m<PATH>[0m
          Read package readiness decisions from this report

      [93m--all[0m
          Include every matching package instead of the default subset

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
