crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_step_publish_packages.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange step publish-packages

Run the built-in publish-packages release workflow step

[1m[97mUsage:[0m monochange step publish-packages [--dry-run] [--format <FORMAT>] [--output <PATH>] [--package <PACKAGE>] [--group <GROUP>] [--ecosystem <ECOSYSTEM>] [--resume <PATH>] [--all] [--show-all] [--stream-output] [--fail-on-duplicate]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
      [93m--format[0m[95m [0m[95m<FORMAT>[0m
          Result format: text, Markdown, pretty JSON, or compact JSON

          [possible values: text, json, json-min, md]

      [93m--output[0m[95m [0m[95m<PATH>[0m
          Write the complete result to this path

      [93m--package[0m[95m [0m[95m<PACKAGE>[0m
          Limit the operation to one or more package ids

      [93m--group[0m[95m [0m[95m<GROUP>[0m
          Limit the operation to one or more version-group ids

      [93m--ecosystem[0m[95m [0m[95m<ECOSYSTEM>[0m
          Limit the operation to one or more package ecosystems

      [93m--resume[0m[95m [0m[95m<PATH>[0m
          Resume publishing from a saved publish report

      [93m--all[0m
          Include every matching package instead of the default subset

      [93m--show-all[0m
          Include unchanged and skipped package details

      [93m--stream-output[0m
          Stream package-manager output while publishing

      [93m--fail-on-duplicate[0m
          Treat an already-published package version as a failure

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
